<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260625155955 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE api_logs (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, endpoint VARCHAR(255) NOT NULL, request_type VARCHAR(100) NOT NULL, response_status INT DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_D178B0AFA76ED395 ON api_logs (user_id)');
        $this->addSql('CREATE TABLE comments (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, content TEXT NOT NULL, status VARCHAR(50) DEFAULT \'visible\' NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, user_id INT NOT NULL, review_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_5F9E962AA76ED395 ON comments (user_id)');
        $this->addSql('CREATE INDEX IDX_5F9E962A3E2E969B ON comments (review_id)');
        $this->addSql('CREATE TABLE courses (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, title VARCHAR(180) NOT NULL, description TEXT DEFAULT NULL, coefficient DOUBLE PRECISION DEFAULT NULL, hours INT DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, semester_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_A9A55A4C4A798B6F ON courses (semester_id)');
        $this->addSql('CREATE TABLE course_teachers (course_id INT NOT NULL, teacher_id INT NOT NULL, PRIMARY KEY (course_id, teacher_id))');
        $this->addSql('CREATE INDEX IDX_44B372A0591CC992 ON course_teachers (course_id)');
        $this->addSql('CREATE INDEX IDX_44B372A041807E1D ON course_teachers (teacher_id)');
        $this->addSql('CREATE TABLE course_tags (course_id INT NOT NULL, tag_id INT NOT NULL, PRIMARY KEY (course_id, tag_id))');
        $this->addSql('CREATE INDEX IDX_A71E4920591CC992 ON course_tags (course_id)');
        $this->addSql('CREATE INDEX IDX_A71E4920BAD26311 ON course_tags (tag_id)');
        $this->addSql('CREATE TABLE email_logs (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, recipient VARCHAR(180) NOT NULL, subject VARCHAR(255) NOT NULL, type VARCHAR(100) NOT NULL, status VARCHAR(50) NOT NULL, sent_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, user_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_6FB9E6D9A76ED395 ON email_logs (user_id)');
        $this->addSql('CREATE TABLE favorites (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, course_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_E46960F5A76ED395 ON favorites (user_id)');
        $this->addSql('CREATE INDEX IDX_E46960F5591CC992 ON favorites (course_id)');
        $this->addSql('CREATE UNIQUE INDEX uniq_favorite_user_course ON favorites (user_id, course_id)');
        $this->addSql('CREATE TABLE formations (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(150) NOT NULL, description TEXT DEFAULT NULL, degree_level VARCHAR(100) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE moderation_actions (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, action VARCHAR(100) NOT NULL, reason TEXT DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, moderator_profile_id INT NOT NULL, review_id INT DEFAULT NULL, comment_id INT DEFAULT NULL, report_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_2E0B3A70A0BFB218 ON moderation_actions (moderator_profile_id)');
        $this->addSql('CREATE INDEX IDX_2E0B3A703E2E969B ON moderation_actions (review_id)');
        $this->addSql('CREATE INDEX IDX_2E0B3A70F8697D13 ON moderation_actions (comment_id)');
        $this->addSql('CREATE INDEX IDX_2E0B3A704BD2A4C0 ON moderation_actions (report_id)');
        $this->addSql('CREATE TABLE notifications (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, title VARCHAR(180) NOT NULL, message TEXT NOT NULL, is_read BOOLEAN DEFAULT false NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_6000B0D3A76ED395 ON notifications (user_id)');
        $this->addSql('CREATE TABLE profiles (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, first_name VARCHAR(100) NOT NULL, last_name VARCHAR(100) NOT NULL, avatar VARCHAR(255) DEFAULT NULL, bio TEXT DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, user_id INT NOT NULL, profile_type VARCHAR(50) NOT NULL, level VARCHAR(100) DEFAULT NULL, current_year INT DEFAULT NULL, formation_id INT DEFAULT NULL, moderation_area VARCHAR(150) DEFAULT NULL, handled_reports_count INT DEFAULT 0, admin_code VARCHAR(100) DEFAULT NULL, super_admin BOOLEAN DEFAULT false, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_8B308530A76ED395 ON profiles (user_id)');
        $this->addSql('CREATE INDEX IDX_8B3085305200282E ON profiles (formation_id)');
        $this->addSql('CREATE TABLE rating_criteria (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, description TEXT DEFAULT NULL, max_score INT DEFAULT 5 NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE reports (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, reason VARCHAR(150) NOT NULL, description TEXT DEFAULT NULL, status VARCHAR(50) DEFAULT \'open\' NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, review_id INT DEFAULT NULL, comment_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_F11FA745A76ED395 ON reports (user_id)');
        $this->addSql('CREATE INDEX IDX_F11FA7453E2E969B ON reports (review_id)');
        $this->addSql('CREATE INDEX IDX_F11FA745F8697D13 ON reports (comment_id)');
        $this->addSql('CREATE TABLE resources (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, title VARCHAR(180) NOT NULL, url VARCHAR(255) NOT NULL, type VARCHAR(80) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, course_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_EF66EBAE591CC992 ON resources (course_id)');
        $this->addSql('CREATE TABLE review_ratings (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, score INT NOT NULL, review_id INT NOT NULL, rating_criteria_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_5558B33E3E2E969B ON review_ratings (review_id)');
        $this->addSql('CREATE INDEX IDX_5558B33EE85A99F2 ON review_ratings (rating_criteria_id)');
        $this->addSql('CREATE UNIQUE INDEX uniq_rating_review_criteria ON review_ratings (review_id, rating_criteria_id)');
        $this->addSql('CREATE TABLE reviews (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, title VARCHAR(180) NOT NULL, content TEXT NOT NULL, status VARCHAR(50) DEFAULT \'pending\' NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, user_id INT NOT NULL, course_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_6970EB0FA76ED395 ON reviews (user_id)');
        $this->addSql('CREATE INDEX IDX_6970EB0F591CC992 ON reviews (course_id)');
        $this->addSql('CREATE UNIQUE INDEX uniq_review_user_course ON reviews (user_id, course_id)');
        $this->addSql('CREATE TABLE semesters (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(50) NOT NULL, number INT NOT NULL, formation_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_C54269405200282E ON semesters (formation_id)');
        $this->addSql('CREATE TABLE tags (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, color VARCHAR(30) DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_tags_name ON tags (name)');
        $this->addSql('CREATE TABLE teachers (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, first_name VARCHAR(100) NOT NULL, last_name VARCHAR(100) NOT NULL, email VARCHAR(180) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE users (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, email VARCHAR(180) NOT NULL, password VARCHAR(255) NOT NULL, roles JSON NOT NULL, is_verified BOOLEAN DEFAULT false NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_users_email ON users (email)');
        $this->addSql('CREATE TABLE messenger_messages (id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL, body TEXT NOT NULL, headers TEXT NOT NULL, queue_name VARCHAR(190) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, available_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, delivered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_75EA56E0FB7336F0E3BD61CE16BA31DBBF396750 ON messenger_messages (queue_name, available_at, delivered_at, id)');
        $this->addSql('ALTER TABLE api_logs ADD CONSTRAINT FK_D178B0AFA76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE comments ADD CONSTRAINT FK_5F9E962AA76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE comments ADD CONSTRAINT FK_5F9E962A3E2E969B FOREIGN KEY (review_id) REFERENCES reviews (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE courses ADD CONSTRAINT FK_A9A55A4C4A798B6F FOREIGN KEY (semester_id) REFERENCES semesters (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE course_teachers ADD CONSTRAINT FK_44B372A0591CC992 FOREIGN KEY (course_id) REFERENCES courses (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE course_teachers ADD CONSTRAINT FK_44B372A041807E1D FOREIGN KEY (teacher_id) REFERENCES teachers (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE course_tags ADD CONSTRAINT FK_A71E4920591CC992 FOREIGN KEY (course_id) REFERENCES courses (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE course_tags ADD CONSTRAINT FK_A71E4920BAD26311 FOREIGN KEY (tag_id) REFERENCES tags (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE email_logs ADD CONSTRAINT FK_6FB9E6D9A76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE favorites ADD CONSTRAINT FK_E46960F5A76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE favorites ADD CONSTRAINT FK_E46960F5591CC992 FOREIGN KEY (course_id) REFERENCES courses (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE moderation_actions ADD CONSTRAINT FK_2E0B3A70A0BFB218 FOREIGN KEY (moderator_profile_id) REFERENCES profiles (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE moderation_actions ADD CONSTRAINT FK_2E0B3A703E2E969B FOREIGN KEY (review_id) REFERENCES reviews (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE moderation_actions ADD CONSTRAINT FK_2E0B3A70F8697D13 FOREIGN KEY (comment_id) REFERENCES comments (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE moderation_actions ADD CONSTRAINT FK_2E0B3A704BD2A4C0 FOREIGN KEY (report_id) REFERENCES reports (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE notifications ADD CONSTRAINT FK_6000B0D3A76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE profiles ADD CONSTRAINT FK_8B308530A76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE profiles ADD CONSTRAINT FK_8B3085305200282E FOREIGN KEY (formation_id) REFERENCES formations (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reports ADD CONSTRAINT FK_F11FA745A76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reports ADD CONSTRAINT FK_F11FA7453E2E969B FOREIGN KEY (review_id) REFERENCES reviews (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reports ADD CONSTRAINT FK_F11FA745F8697D13 FOREIGN KEY (comment_id) REFERENCES comments (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE resources ADD CONSTRAINT FK_EF66EBAE591CC992 FOREIGN KEY (course_id) REFERENCES courses (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE review_ratings ADD CONSTRAINT FK_5558B33E3E2E969B FOREIGN KEY (review_id) REFERENCES reviews (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE review_ratings ADD CONSTRAINT FK_5558B33EE85A99F2 FOREIGN KEY (rating_criteria_id) REFERENCES rating_criteria (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reviews ADD CONSTRAINT FK_6970EB0FA76ED395 FOREIGN KEY (user_id) REFERENCES users (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reviews ADD CONSTRAINT FK_6970EB0F591CC992 FOREIGN KEY (course_id) REFERENCES courses (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE semesters ADD CONSTRAINT FK_C54269405200282E FOREIGN KEY (formation_id) REFERENCES formations (id) NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE api_logs DROP CONSTRAINT FK_D178B0AFA76ED395');
        $this->addSql('ALTER TABLE comments DROP CONSTRAINT FK_5F9E962AA76ED395');
        $this->addSql('ALTER TABLE comments DROP CONSTRAINT FK_5F9E962A3E2E969B');
        $this->addSql('ALTER TABLE courses DROP CONSTRAINT FK_A9A55A4C4A798B6F');
        $this->addSql('ALTER TABLE course_teachers DROP CONSTRAINT FK_44B372A0591CC992');
        $this->addSql('ALTER TABLE course_teachers DROP CONSTRAINT FK_44B372A041807E1D');
        $this->addSql('ALTER TABLE course_tags DROP CONSTRAINT FK_A71E4920591CC992');
        $this->addSql('ALTER TABLE course_tags DROP CONSTRAINT FK_A71E4920BAD26311');
        $this->addSql('ALTER TABLE email_logs DROP CONSTRAINT FK_6FB9E6D9A76ED395');
        $this->addSql('ALTER TABLE favorites DROP CONSTRAINT FK_E46960F5A76ED395');
        $this->addSql('ALTER TABLE favorites DROP CONSTRAINT FK_E46960F5591CC992');
        $this->addSql('ALTER TABLE moderation_actions DROP CONSTRAINT FK_2E0B3A70A0BFB218');
        $this->addSql('ALTER TABLE moderation_actions DROP CONSTRAINT FK_2E0B3A703E2E969B');
        $this->addSql('ALTER TABLE moderation_actions DROP CONSTRAINT FK_2E0B3A70F8697D13');
        $this->addSql('ALTER TABLE moderation_actions DROP CONSTRAINT FK_2E0B3A704BD2A4C0');
        $this->addSql('ALTER TABLE notifications DROP CONSTRAINT FK_6000B0D3A76ED395');
        $this->addSql('ALTER TABLE profiles DROP CONSTRAINT FK_8B308530A76ED395');
        $this->addSql('ALTER TABLE profiles DROP CONSTRAINT FK_8B3085305200282E');
        $this->addSql('ALTER TABLE reports DROP CONSTRAINT FK_F11FA745A76ED395');
        $this->addSql('ALTER TABLE reports DROP CONSTRAINT FK_F11FA7453E2E969B');
        $this->addSql('ALTER TABLE reports DROP CONSTRAINT FK_F11FA745F8697D13');
        $this->addSql('ALTER TABLE resources DROP CONSTRAINT FK_EF66EBAE591CC992');
        $this->addSql('ALTER TABLE review_ratings DROP CONSTRAINT FK_5558B33E3E2E969B');
        $this->addSql('ALTER TABLE review_ratings DROP CONSTRAINT FK_5558B33EE85A99F2');
        $this->addSql('ALTER TABLE reviews DROP CONSTRAINT FK_6970EB0FA76ED395');
        $this->addSql('ALTER TABLE reviews DROP CONSTRAINT FK_6970EB0F591CC992');
        $this->addSql('ALTER TABLE semesters DROP CONSTRAINT FK_C54269405200282E');
        $this->addSql('DROP TABLE api_logs');
        $this->addSql('DROP TABLE comments');
        $this->addSql('DROP TABLE courses');
        $this->addSql('DROP TABLE course_teachers');
        $this->addSql('DROP TABLE course_tags');
        $this->addSql('DROP TABLE email_logs');
        $this->addSql('DROP TABLE favorites');
        $this->addSql('DROP TABLE formations');
        $this->addSql('DROP TABLE moderation_actions');
        $this->addSql('DROP TABLE notifications');
        $this->addSql('DROP TABLE profiles');
        $this->addSql('DROP TABLE rating_criteria');
        $this->addSql('DROP TABLE reports');
        $this->addSql('DROP TABLE resources');
        $this->addSql('DROP TABLE review_ratings');
        $this->addSql('DROP TABLE reviews');
        $this->addSql('DROP TABLE semesters');
        $this->addSql('DROP TABLE tags');
        $this->addSql('DROP TABLE teachers');
        $this->addSql('DROP TABLE users');
        $this->addSql('DROP TABLE messenger_messages');
    }
}
